# python3-anticaptcha

./: .buildinfo  .coveragerc  .gitignore  .isort.cfg  .travis.yml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  aio_test.py  codecov.yml  conf.py  genindex.html  index.html  index.rst  objects.inv  pyproject.toml  requirements.style.txt  requirements.test.txt  search.html  searchindex.js  setup.py  test.py
.github/workflows/: build.yml  install.yml  lint.yml  pythonpackage.yml  sphinx.yml  test.yml  test_build.yml
_sources/: index.rst.txt
_static/: pygments.css
anticaptcha_examples/: anticaptcah_image_to_text_example.py  anticaptcha_control_example.py  anticaptcha_customcaptcha_example.py  anticaptcha_fun_example.py  anticaptcha_hcaptcha_example.py  anticaptcha_nocaptcha_example.py  anticaptcha_recaptcha_v3_example.py  anticaptcha_square_net_task.py  base64image.txt  callback_examples.py  custom_result_handler_example.py  gee_example.py  selenium_recaptcha_v2.py
docs/: conf.py  index.rst  make.bat  requirements.txt
modules/amazon-waf/: example.html
modules/contacts/: info.html
modules/control/: example.html
modules/core/: info.html
modules/custom-task/: example.html
modules/enum/: info.html
modules/friend/: example.html
modules/fun-captcha/: example.html
modules/gee-test/: example.html
modules/image/: example.html
modules/image-to-coordinates/: example.html
modules/license/: info.html
modules/main/: info.html
modules/other-libs/: info.html
modules/prosopo/: example.html
modules/recaptcha-v2/: example.html
python3_anticaptcha/: AntiCaptchaAppStats.py  AntiCaptchaControl.py  CallbackClient.py  CustomCaptchaTask.py  CustomResultHandler.py  FunCaptchaTask.py  FunCaptchaTaskProxyless.py  GeeTestTask.py  GeeTestTaskProxyless.py  HCaptchaTask.py  HCaptchaTaskProxyless.py  ImageToTextTask.py  NoCaptchaTask.py  NoCaptchaTaskProxyless.py  ReCaptchaV3TaskProxyless.py  SquareNetTextTask.py  __init__.py  aioAntiCaptchaControl.py  aioImageToTextTask.py  config.py  errors.py  get_answer.py  turnstile.py
src/: .coveragerc  pyproject.toml  requirements.txt  setup.py
tests/: AGENTS.md  conftest.py  main.py  test_Callback.py  test_Control.py  test_CustomCaptcha.py  test_CustomResultHandler.py  test_ImageToText.py  test_NoCaptcha.py  test_Recaptcha3Proxyless.py  test_altcha.py  test_amazon_waf.py  test_control.py  test_core.py  test_custom_task.py  test_fun_captcha.py  test_gee_test.py  test_image_captcha.py  test_image_to_coordinates.py  test_image_to_text.py  test_recaptcha_v2.py  test_recaptcha_v3.py  test_turnstile.py
(+79 files in other folders)
